[project]
name = "chatflow"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "oyaml>=1.0",
    "pydantic>=2.10.6",
    "virtualenv>=20.29.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
    "ruff>=0.9.10",
]


[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", # Error
    "W", # Warning
    "F", # pyflakes
    "I", # isort
]
fixable = ["ALL"]
